--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: your website name
+title: Hyde
 email: your-email@domain.com
 description: >
   Write an awesome description for your new site here. You can edit this
@@ -7,6 +7,7 @@ description: >
   Google search results) and in your feed.xml site description.
 baseurl: ""
 url: "http://yourdomain.com"
+asseturl: "/assets/"
 keywords: 'your, site, keyword, used, for, meta, keywords'
 facebook_username: yourfacebookusername
 twitter_username: yourtwitterusername
@@ -15,7 +16,7 @@ linkedin_username: yourlinkedinusername
 google_site_verification: whatever
 
 # Article settings
-name: your website name
+name: Hyde
 author: Your Website Author
 author_desc: >
   Write your author description for your new site here. You can edit this
@@ -44,7 +45,11 @@ jekyll-archives:
   enabled:
     - categories
     - tags
+    - year
+    - month
   layout: 'archive'
   permalinks:
     tag: '/tag/:name/'
     category: '/category/:name/'
+    year: '/:year/'
+    month: '/:year/:month/'    
