--- a/.scss-lint.yml
+++ b/.scss-lint.yml
@@ -167,8 +167,7 @@ linters:
     convention: hyphenated_BEM # or 'strict_BEM', or 'hyphenated_BEM', or 'snake_case', or 'camel_case', or a regex pattern
 
   Shorthand:
-    enabled: true
-    allowed_shorthands: [1, 2, 3]
+    enabled: false
 
   SingleLinePerProperty:
     enabled: true
