--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "chalk": "^1.1.3",
     "gridle": "^2.0.48",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
     "gulp-concat": "^2.6.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
     "gulp-serve": "^1.4.0",
     "gulp-uglify": "^1.5.4",
     "vinyl-buffer": "^1.0.0",
